==> RiodyProc/tech-exploration/stm32-projects/Environment-Monitoring-System/BME280/bme280.c <==
#include "bme280.h"
#include "main.h"

static void I2Cx_WriteData(uint16_t Addr, uint8_t Reg, uint8_t Value) {
  uint16_t i;
  
  //Disable Pos
  LL_I2C_DisableBitPOS(I2C1);
  LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_ACK);
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  
  //Read state
  (void) I2C1->SR1;
  LL_I2C_TransmitData8(I2C1, Addr | 0x00);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  
  LL_I2C_TransmitData8(I2C1, Reg);
  while(!LL_I2C_IsActiveFlag_TXE(I2C1)){};
  LL_I2C_TransmitData8(I2C1, Value);
  while(!LL_I2C_IsActiveFlag_TXE(I2C1)){};
  
  LL_I2C_GenerateStopCondition(I2C1);
}

static uint8_t I2Cx_ReadData(uint16_t Addr, uint8_t Reg) {
  //Disable Pos
  LL_I2C_DisableBitPOS(I2C1);
  LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_ACK);
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  
  // Write the memory address from which we are going to read
  // Addr -> uint8_t
  LL_I2C_TransmitData8(I2C1, Addr | 0x00);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  // Reg -> uint8_t
  LL_I2C_TransmitData8(I2C1, Reg);
  while(!LL_I2C_IsActiveFlag_TXE(I2C1)){};
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  LL_I2C_TransmitData8(I2C1, Addr | 0x1);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_NACK);
  LL_I2C_GenerateStopCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_RXNE(I2C1)){};
  uint8_t value = LL_I2C_ReceiveData8(I2C1);

  return value;
}

static void I2Cx_ReadData16(uint16_t Addr, uint8_t Reg, uint16_t *Value) {
  uint8_t bytes_count = 2;
  uint8_t data[2];

  //Disable Pos
  LL_I2C_DisableBitPOS(I2C1);
  LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_ACK);
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  
  // Write the memory address from which we are going to read
  // Addr -> uint8_t
  LL_I2C_TransmitData8(I2C1, Addr | 0x00);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  // Reg -> uint8_t
  LL_I2C_TransmitData8(I2C1, Reg);
  while(!LL_I2C_IsActiveFlag_TXE(I2C1)){};
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  LL_I2C_TransmitData8(I2C1, Addr | 0x1);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  for(uint8_t i=0;i<bytes_count;i++)
  {
    if(i<(bytes_count-1))
    {
      while(!LL_I2C_IsActiveFlag_RXNE(I2C1)){};
      data[i] = LL_I2C_ReceiveData8(I2C1);
    }
    else
    {
      LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_NACK);
      LL_I2C_GenerateStopCondition(I2C1);
      while(!LL_I2C_IsActiveFlag_RXNE(I2C1)){};
      data[i] = LL_I2C_ReceiveData8(I2C1);
    }
  }

  // Combine the received data into a 16-bit value
  *Value = ((uint16_t)data[1] << 8) | data[0];
}

static void I2Cx_ReadData24(uint16_t Addr, uint8_t Reg, uint32_t *Value) {
  uint8_t bytes_count = 3;
  uint8_t data[3];

  //Disable Pos
  LL_I2C_DisableBitPOS(I2C1);
  LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_ACK);
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  
  // Write the memory address from which we are going to read
  // Addr -> uint8_t
  LL_I2C_TransmitData8(I2C1, Addr | 0x00);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  // Reg -> uint8_t
  LL_I2C_TransmitData8(I2C1, Reg);
  while(!LL_I2C_IsActiveFlag_TXE(I2C1)){};
  LL_I2C_GenerateStartCondition(I2C1);
  while(!LL_I2C_IsActiveFlag_SB(I2C1)){};
  //read state
  (void) I2C1->SR1;
  LL_I2C_TransmitData8(I2C1, Addr | 0x1);
  while(!LL_I2C_IsActiveFlag_ADDR(I2C1)){};
  LL_I2C_ClearFlag_ADDR(I2C1);
  for(uint8_t i=0;i<bytes_count;i++)
  {
    if(i<(bytes_count-1))
    {
      while(!LL_I2C_IsActiveFlag_RXNE(I2C1)){};
      data[i] = LL_I2C_ReceiveData8(I2C1);
    }
    else
    {
      LL_I2C_AcknowledgeNextData(I2C1, LL_I2C_NACK);
      LL_I2C_GenerateStopCondition(I2C1);
      while(!LL_I2C_IsActiveFlag_RXNE(I2C1)){};
      data[i] = LL_I2C_ReceiveData8(I2C1);
    }
  }

  // Combine the received data into a 16-bit value
  *Value = ((uint32_t)data[2] << 16) | ((uint32_t)data[1] << 8) | data[0];
}
